--- a/assets/css/premium.scss
+++ b/assets/css/premium.scss
@@ -82,6 +82,7 @@
 @import 'appResume/premium/sections/salaryGraph';
 @import 'appResume/premium/sections/editable';
 @import 'appResume/premium/sections/contacts';
+@import 'appResume/commons/ui/textEdit';
 @import 'appResume/commons/ui/buttonSave';
 @import 'appResume/commons/sections/finish';
 
