--- a/assets/templates/appResume/premium/editable/editableHobby.html
+++ b/assets/templates/appResume/premium/editable/editableHobby.html
@@ -40,6 +40,7 @@
             </div>
             <div class="pos-rel">
                 <span class="input-title">дополняющий текст</span>
+                <textarea-expand onClick={ $Editable.component.textEdit } placeholder="Дополняющий текст о ваших хоббии" data-name="text"></textarea-expand>
                 <textarea onInput={ $Editable.component.autoCommit } class="textarea textarea-xl" data-name="text" name="text_data" autocomplete="off" placeholder="Дополняющий текст о ваших хоббии">{ data.text }</textarea>
             </div>
         </div>
