--- a/assets/templates/sections/inbox/inbox.html
+++ b/assets/templates/sections/inbox/inbox.html
@@ -90,6 +90,7 @@
                 });
             }
         });
+        document.removeEventListener('click', $.handleClickOutside)
     };
 
     $.onSelect = function(){
