--- a/assets/css/appResume/basic/_style.scss
+++ b/assets/css/appResume/basic/_style.scss
@@ -9,7 +9,6 @@
 @import 'ui/buttons';
 @import 'ui/tags';
 @import 'ui/text';
-@import 'ui/textEdit';
 
 // Resume control
 @import 'control/buttons';
@@ -19,5 +18,6 @@
 @import 'sections/sections';
 @import 'sections/content';
 @import 'sections/finish';
+@import '../commons/ui/textEdit';
 @import '../commons/ui/buttonSave';
 @import '../commons/sections/finish';
