--- a/assets/css/appResume/basic/ui/_tags.scss
+++ b/assets/css/appResume/basic/ui/_tags.scss
@@ -7,16 +7,17 @@
 
         .d-phone & {
             font-size:18px;
-            line-height:50px;
+            line-height:54px;
             @extend .h50;
             @extend .letterSpacing--xs;
             @extend .text-truncate;
+            @extend .text-left;
         }
     }
     .tag-input {
         .d-phone & {
             @extend .mr0;
-            @extend .mb-m;
+            @extend .mb-s;
         }
         .input {
             &:focus {
