--- a/assets/css/appResume/basic/ui/_textarea.scss
+++ b/assets/css/appResume/basic/ui/_textarea.scss
@@ -12,11 +12,12 @@
         min-height:320px;
 
         .d-phone & {
+            height:calc(100vh - 300px);
             min-height:280px;
         }
         &:focus {
             box-shadow:inset 0 0 0 1px $blueBright;
-        }        
+        }
     }
     textarea::placeholder {
         @extend .c-gray;
