--- a/assets/templates/appResume/premium/editable/editableEducation.html
+++ b/assets/templates/appResume/premium/editable/editableEducation.html
@@ -58,6 +58,7 @@
             <div class="col-xs-24">
                 <div class="pos-rel">
                     <span class="input-title">дополняющий текст</span>
+                    <textarea-expand onClick={ $Editable.component.textEdit } placeholder="Дополняющий текст о законченном образовании" data-name="text"></textarea-expand>
                     <textarea onInput={ $Editable.component.autoCommit } class="textarea textarea-xl" data-name="text" name="text_data" autocomplete="off" placeholder="Дополняющий текст о законченном образовании">{ data.text }</textarea>
                 </div>
             </div>
