--- a/assets/templates/appResume/premium/editable/editableLanguages.html
+++ b/assets/templates/appResume/premium/editable/editableLanguages.html
@@ -14,6 +14,7 @@
             <div class="col-xs-24 col-sm-24 col-md-11">
                 <div class="pos-rel mb-l">
                     <span class="input-title">вступительный текст</span>
+                    <textarea-expand onClick={ $Editable.component.textEdit } placeholder={ $store.resume.placeholder.languages.help.text } data-name="text"></textarea-expand>
                     <textarea style="height:265px" onInput={ $Editable.component.autoCommit } class="textarea textarea-xl" data-name="text" name="text_data" autocomplete="off" placeholder={ $store.resume.placeholder.languages.help.text }>{ data.text }</textarea>
                 </div>
             </div>
