--- a/assets/templates/appResume/premium/editable/editableTags.html
+++ b/assets/templates/appResume/premium/editable/editableTags.html
@@ -1,4 +1,4 @@
-<editable-tags class="col-sm-offset-2 col-sm-20 col-md-offset-4 col-md-16 col-lg-offset-6 col-lg-13 section__editable__container" data-editing="tags">
+<editable-tags class="col-sm-offset-2 col-sm-20 col-md-offset-4 col-md-16 col-lg-offset-5 col-lg-15 section__editable__container" data-editing="tags">
 
     <ui-switcher id="activity" color="white" value={ active } commit="true"></ui-switcher>
 
@@ -14,7 +14,7 @@
                         <path class="tag-list-addButton-svg-color" d="M 23 9 L 23 23 L 9 23 L 9 27 L 23 27 L 23 41 L 27 41 L 27 27 L 41 27 L 41 23 L 27 23 L 27 9 L 23 9 z"></path>
                     </svg>
                 </div>
-                <div class="input-autosuggest-items borderRadius-xl" style="min-width:280px; top:46px; left:-10px"><div onClick={ $Editable.autosuggest.select } each={ item in $Editable.autosuggest.items } no-reorder class="input-autosuggest-item">
+                <div class="input-autosuggest-items borderRadius-xl" style="min-width:280px; top:46px"><div onClick={ $Editable.autosuggest.select } each={ item in $Editable.autosuggest.items } no-reorder class="input-autosuggest-item">
                     <div class="input-autosuggest-item-title">{ item.text }</div>
                 </div></div>
             </div>
