--- a/assets/templates/appResume/basic/components/skills.html
+++ b/assets/templates/appResume/basic/components/skills.html
@@ -23,24 +23,11 @@
     var $ = this;
 
     $.on("mount", function(){
-        $.tags["ui-tags"].on("addTag", function(){
+        $.tags["ui-tags"].on("addTag removeTag", function(){
             $afterlag.run(function(){
                 $Sections.resume.edit.section.refresh();
             });
         })
-        $.tags["ui-tags"].on("removeTag", function(){
-            $afterlag.run(function(){
-                $Sections.resume.edit.section.refresh();
-            });
-        })
-    });
-
-    $.on("updated", function(){
-        if ($Sections.resume.edit.section && $Sections.resume.edit.ready){
-            $afterlag.run(function(){
-                $Sections.resume.edit.section.refresh();
-            });
-        }
     });
 
     $.build = function(){
@@ -48,8 +35,7 @@
     };
 
     $.on("before-unmount", function(){
-        $.tags["ui-tags"].off("addTag");
-        $.tags["ui-tags"].off("removeTag");
+        $.tags["ui-tags"].off("addTag removeTag");
     });
 
 </script>
